[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["store_reviews_onboarding"]

[project]
name = "StoreReviewsOnboarding"
version = "0.1"
dependencies = [
    "requests",
]
requires-python = ">=3.11"

[project.scripts]
system-monitor = "store_reviews_onboarding.system_monitor:main"
system-monitor-service = "store_reviews_onboarding.system_monitor_service:main"
system-monitor-client = "store_reviews_onboarding.system_monitor_client:main"
network-discovery = "store_reviews_onboarding.network_discovery:main"

[tool.ruff]
line-length = 120
